--- a/search_content_by_multi_search_engine.ipynb
+++ b/search_content_by_multi_search_engine.ipynb
@@ -50,19 +50,9 @@
     "\n",
     "```shell\n",
     "REM open chrome in new window\n",
-    "call \"cmd /c start chrome --args --new-window https://google.com/search?q=%1\"\n",
+    "call \"cmd /c start chrome --args --new-window https://google.com/search?q=\"%*\" https://duckduckgo.com/?q=\"%*\" https://bing.com/search?q=\"%*\" https://www.baidu.com/s?wd=\"%*\" \"\n",
     "\n",
-    "REM 延时 1 秒，确保后面的页面都在同一窗口内打开。\n",
-    "ping -n 1 127.0.0.1>nul\n",
-    "\n",
-    "REM duckduckgo\n",
-    "start chrome https://duckduckgo.com/?q=%1\n",
-    "REM bing\n",
-    "start chrome https://bing.com/search?q=%1\n",
-    "REM baidu\n",
-    "start chrome https://baidu.com/s?wd=%1\n",
-    "\n",
-    "ping -n 5 127.0.0.1>nul\n",
+    "ping -n 10 127.0.0.1 1>nul 2>nul\n",
     "```"
    ]
   },
@@ -83,21 +73,19 @@
     "\n",
     "```python\n",
     "#!/usr/bin/python3.9\n",
-    "import os\n",
-    "import sys\n",
-    "from time import sleep\n",
+    "from os import popen\n",
+    "from sys import argv\n",
     "\n",
+    "args = argv[1:]   # 参数是以空格分隔的\n",
+    "content = '%20'.join(args)  # 搜索关键词，合为一个字符串时，以空格分隔\n",
     "\n",
-    "args = sys.argv[1:]   # 参数是以空格分隔的\n",
-    "# 搜索词\n",
-    "content = '%20'.join(args)  # 合为一个字符串时，以空格分隔\n",
     "chrome = r'\"C:\\Program Files\\Google\\Chrome\\Application\\chrome.exe\"'\n",
-    "sleep(0.15)\n",
     "\n",
-    "os.popen(f'{chrome} --args --new-window https://google.com/search?q={content}')\n",
-    "os.popen(f'{chrome} https://duckduckgo.com/?q={content}')\n",
-    "os.popen(f'{chrome} https://bing.com/search?q={content}')\n",
-    "os.popen(f'{chrome} https://www.baidu.com/s?wd={content}')\n",
+    "popen(f'{chrome} --args --new-window \\\n",
+    "        \"https://google.com/search?q={content}\" \\\n",
+    "        \"https://duckduckgo.com/?q={content}\" \\\n",
+    "        \"https://bing.com/search?q={content}\" \\\n",
+    "        \"https://www.baidu.com/s?wd={content}\"')\n",
     "```\n"
    ]
   },
@@ -184,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
